# dataframer

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
src/dataframer/: column_factory.py  create_dataframe.py
tests/: test_create_dataframe.py
