[tool.poetry]
name = "dataframer"
version = "0.1.0"
description = "Easily create pandas dataframe fixtures"
authors = ["Alberto Camara <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
lefthook = "^0.1.2"
pylint = "^2.6.0"
mypy = "^0.782"
black = "^20.8b1"
bandit = "^1.6.2"
mutmut = "^2.1.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
